--- a/install_prometheus/tasks/main.yml
+++ b/install_prometheus/tasks/main.yml
@@ -5,20 +5,55 @@
   ansible.builtin.git:
     repo: "https://github.com/prometheus-operator/kube-prometheus.git"
     dest: "/root/kube-prometheus"
-  when: "'masters' in group_names"
+
+# - name: Install kube-prometheus
+#   environment:
+#     KUBECONFIG: "/etc/kubernetes/admin.conf"
+#   ansible.builtin.shell: |
+#     kubectl apply --server-side -f /root/kube-prometheus/manifests/setup
+#     kubectl wait \
+#       --for condition=Established \
+#       --all CustomResourceDefinition \
+#       --namespace=monitoring
+#     kubectl apply -f /root/kube-prometheus/manifests/
+#   when: "'masters' in group_names"
+
+# Server side apply
 
 - name: Install kube-prometheus
   environment:
     KUBECONFIG: "/etc/kubernetes/admin.conf"
-  ansible.builtin.shell: |
-    kubectl apply --server-side -f /root/kube-prometheus/manifests/setup
-    kubectl wait \
-      --for condition=Established \
-      --all CustomResourceDefinition \
-      --namespace=monitoring
-    kubectl apply -f /root/kube-prometheus/manifests/
-  when: "'masters' in group_names"
- 
+  block:
+  - name: install pip
+    ansible.builtin.apt:
+      name: pip
+  - name: install Requirements
+    ansible.builtin.pip:
+      name:
+      - kubernetes >= 12.0.0
+      - PyYAML >= 3.11
+      - jsonpatch 
+  - name: Install setup
+    kubernetes.core.k8s:
+      state: present
+      # src: "/root/kube-prometheus/manifests/setup/"
+      definition: "{{ lookup('file', '/root/kube-prometheus/manifests/setup/*') | from_yaml_all }}"
+      apply: yes
+      server_side_apply:
+        field_manager: ansible  
+  - name: Pause a Deployment
+    kubernetes.core.k8s:
+      namespace: monitoring
+      wait: yes
+      wait_condition:
+        type: CustomResourceDefinition
+        status: true
+  - name: Install manifests
+    kubernetes.core.k8s:
+      state: present
+      src: //root/kube-prometheus/manifests/
+      apply: yes
+
 - name: Copy config containerd
   copy:
     src: monitoring_service.yaml
@@ -27,10 +62,8 @@
     mode: 0644
     owner: root
     group: root
-  when: "'masters' in group_names"
 
 - name: Install ingress config
   environment:
     KUBECONFIG: "/etc/kubernetes/admin.conf"
   shell: kubectl apply -f /root/monitoring_service.yaml
-  when: "'masters' in group_names"
